--- a/catalog.html
+++ b/catalog.html
@@ -5,25 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header data-test="header" class="page-header">
       <nav class="navigation">
-        <a class="navigation-logo" href="index.html">
+        <a class="navigation-logo" href="index.html" aria-current="p">
           <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седона.">
         </a>
-        <ul class="navigation-list">
+        <ul class="list navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="index.html" >Главная</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">О седоне</a>
+            <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation-list navigation-user">
+        <ul class="list navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">
@@ -35,9 +36,6 @@
             <a class="navigation-link" href="#">
               <span class="visually-hidden">
                 Избранное
-              </span>
-              <span>
-                12
               </span>
             </a>
           </li>
@@ -55,7 +53,7 @@
       <section data-test="filter" class="filter">
         <h1 class="filter-title">Гостиницы Седоны</h1>
 
-        <ul class="filter-breadcrumbs breadcrumbs-list">
+        <ul class="filter-breadcrumbs list breadcrumbs-list">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html">
               <span class="visually-hidden">
@@ -71,9 +69,9 @@
         </ul>
 
         <form class="filter-catalog" action="#" method="get">
-          <fieldset class="filter-infrastructure">
-            <legend class="filter-infrastructure-title">Инфраструктура:</legend>
-            <ul class="filter-infrastructure-list control-list">
+          <fieldset class="filter-item filter-infrastructure">
+            <legend class="filter-heading filter-infrastructure-title">Инфраструктура:</legend>
+            <ul class="filter-infrastructure-list list control-list">
               <li class="control-item">
                 <input class="control-input" id="pool" name="pool" value="pool" type="checkbox" checked>
                 <label class="control-label" for="pool">Бассейн</label>
@@ -89,9 +87,9 @@
             </ul>
           </fieldset>
 
-          <fieldset class="filter-housing">
-            <legend class="filter-housing-title">Тип жилья:</legend>
-            <ul class="filter-housing-list control-list">
+          <fieldset class="filter-item filter-housing">
+            <legend class="filter-heading filter-housing-title">Тип жилья:</legend>
+            <ul class="filter-housing-list list control-list">
               <li class="control-item">
                 <input class="control-input" id="hotel" name="hotel-group" type="radio" value="hotel" checked>
                 <label class="control-label" for="hotel">Гостиница</label>
@@ -107,23 +105,29 @@
             </ul>
           </fieldset>
 
-          <fieldset class="filter-cost">
-            <legend>Стоимость, ₽:</legend>
-            <label>от<input type="text" value="0"></label>
-            <label>до<input type="text" value="9000"></label>
+          <fieldset class="filter-item filter-cost">
+            <legend class="filter-heading filter-cost-title">Стоимость, ₽:</legend>
+            <label>
+              <span class="limit-cost">от</span>
+              <input class="cost-text" type="text" value="0">
+            </label>
+            <label>
+              <span class="limit-cost">до</span>
+              <input class="cost-text" type="text" value="9000">
+            </label>
             <div class="slider">
               <input type="range" min="0" max="10000" value="10000">
             </div>
           </fieldset>
 
-          <button type="submit">Применить</button>
-          <button type="reset">Сбросить</button>
+          <button class="button button-submit" type="submit">Применить</button>
+          <button class="button button-reset" type="reset">Сбросить</button>
         </form>
       </section>
 
 
       <section data-test="catalog" class="catalog">
-        <h2>Найдено гостиниц: <span>38</span></h2>
+        <h2 class="catalog-title">Найдено гостиниц: <span>38</span></h2>
 
         <select class="catalog-select" aria-label="Сортировка">
           <option value="cheap">Сначала дешёвое</option>
@@ -141,20 +145,20 @@
           <span class="visually-hidden">Показать список</span>
         </a>
 
-        <ul class="catalog-list">
+        <ul class="list catalog-list">
           <li class="catalog-card">
             <a class="catalog-card-link" href="#" tabindex="-1">
               <img class="catalog-card-image" src="images/hotel-1.jpg" width="300" height="212" alt="Amara Resort & Spa">
               <h3 class="catalog-card-title">Amara Resort & Spa</h3>
             </a>
-            <p>Гостиница</p>
+            <p class="catalog-card-room">Гостиница</p>
             <b class="catalog-card-price">От 4000 ₽</b>
-            <a class="catalog-card-button button" href="#">Подробнее</a>
-            <a class="catalog-card-button button" href="#">В избранное</a>
+            <a class="button-card-detail button" href="#">Подробнее</a>
+            <a class="button-card-favourit button" href="#">В избранное</a>
             <p class="start start-4">
               <span class="visually-hidden">Четырёхзвёздочный отель</span>
             </p>
-            <p class="catalog-rating">Рейтинг: 5,0</p>
+            <p class="catalog-rating">Рейтинг: 8,5</p>
           </li>
 
           <li class="catalog-card">
@@ -162,10 +166,10 @@
               <img class="catalog-card-image" src="images/hotel-2.jpg" width="300" height="212" alt="Villas at Poco Diablo">
               <h3 class="catalog-card-title">Villas at Poco Diablo</h3>
             </a>
-            <p>Гостиница</p>
+            <p class="catalog-card-room">Гостиница</p>
             <b class="catalog-card-price">От 5000 ₽</b>
-            <a class="catalog-card-button button" href="#">Подробнее</a>
-            <a class="catalog-card-button button" href="#">В избранное</a>
+            <a class="button-card-detail button" href="#">Подробнее</a>
+            <a class="button-card-favourit button" href="#">В избранное</a>
             <p class="start start-4">
               <span class="visually-hidden">Четырёхзвёздочный отель</span>
             </p>
@@ -177,10 +181,10 @@
               <img class="catalog-card-image" src="images/hotel-3.jpg" width="300" height="212" alt="Desert Quail Inn">
               <h3 class="catalog-card-title">Desert Quail Inn</h3>
             </a>
-            <p>Гостиница</p>
+            <p class="catalog-card-room">Гостиница</p>
             <b class="catalog-card-price">От 2500 ₽</b>
-            <a class="catalog-card-button button" href="#">Подробнее</a>
-            <a class="catalog-card-button button" href="#">В избранное</a>
+            <a class="button-card-detail button" href="#">Подробнее</a>
+            <a class="button-card-favourit button" href="#">В избранное</a>
             <p class="start start-3">
               <span class="visually-hidden">Трёхзвёздочный отель</span>
             </p>
@@ -192,10 +196,10 @@
               <img class="catalog-card-image" src="images/hotel-4.jpg" width="300" height="212" alt="GreenTree Inn">
               <h3 class="catalog-card-title">GreenTree Inn</h3>
             </a>
-            <p>Гостиница</p>
+            <p class="catalog-card-room">Гостиница</p>
             <b class="catalog-card-price">От 1500 ₽</b>
-            <a class="catalog-card-button button" href="#">Подробнее</a>
-            <a class="catalog-card-button button" href="#">В избранное</a>
+            <a class="button-card-detail button" href="#">Подробнее</a>
+            <a class="button-card-favourit button" href="#">В избранное</a>
             <p class="start start-2">
               <span class="visually-hidden">Двухзвёздочный отель</span>
             </p>
@@ -203,7 +207,7 @@
           </li>
         </ul>
 
-        <ul class="pagination-list">
+        <ul class="list pagination-list">
           <li class="pagination-item">
             <a class="pagination-link" href="#" >1</a>
           </li>
@@ -240,7 +244,7 @@
     <footer data-test="footer" class="page-footer">
       <h2 class="visually-hidden">Контакты</h2>
       <div class="page-footer-social">
-        <ul class="social-list">
+        <ul class="list social-list">
           <li class="social-item">
             <a class="social-link" href="https://vk.com/htmlacademy">
               <svg xmlns="http://www.w3.org/2000/svg" width="25" height="15" role="img" aria-label="Vkontakte" viewBox="0 0 25 15" fill="none">
