--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header data-test="header" class="page-header">
@@ -12,7 +13,7 @@
         <a class="navigation-logo" href="index.html" aria-current="p">
           <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седона.">
         </a>
-        <ul class="navigation-list">
+        <ul class="list navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="index.html" >Главная</a>
           </li>
@@ -23,7 +24,7 @@
             <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation-list navigation-user">
+        <ul class="list navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">
@@ -55,42 +56,42 @@
 
       <section data-test="advantages" class="advantages">
         <div class="advantages-header">
-          <h2 class="advantages-title">Седона — небольшой городок в Аризоне,
+          <h2 class="title advantages-title">Седона — небольшой городок в Аризоне,
             заслуживающий большего!</h2>
-          <p class="advantages-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <p class="description advantages-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </div>
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <h3 class="advantages-title">Настоящий городок</h3>
-            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        <ul class="list features-list">
+          <li class="features-item">
+            <h3 class="features-title">Настоящий городок</h3>
+            <p class="features-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <img src="images/photo-1.jpg" width="800" height="385" alt="Вид на зелёный дом или кафе с красной крышей в Седоне.">
           </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+          <li class="features-item">
+            <h3 class="features-title">Небольшая площадь</h3>
+            <p class="features-description">Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <li class="features-item">
+            <h3 class="features-title">Красивая дорога</h3>
+            <p class="features-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+          <li class="features-item">
+            <h3 class="features-title">Мало туристов</h3>
+            <p class="features-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-          <li class="advantages-item">
+          <li class="features-item">
             <img src="images/photo-2.jpg" width="800" height="385" alt="Гранд Каньон.">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <h3 class="features-title">Там есть мост дьявола</h3>
+            <p class="features-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
         </ul>
       </section>
 
       <section class="service">
         <div class="service-header">
-          <h2 class="service-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-          <p class="service-description">Опытный персонал и качественное обслуживание!</p>
+          <h2 class="title service-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+          <p class="description service-description">Опытный персонал и качественное обслуживание!</p>
         </div>
-        <ul class="service-list">
+        <ul class="list service-list">
           <li class="service-item">
             <h3 class="service-title">Жильё</h3>
             <p class="service-description">Рекомендуем пожить в настоящем мотеле,
@@ -108,14 +109,14 @@
       </section>
 
       <section data-test="search" class="search">
-        <h2 class="search-title">Заинтересовались?</h2>
-        <p class="search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <h2 class="title search-title">Заинтересовались?</h2>
+        <p class="description search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="button button-search" href="catalog.html">ПОИСК ГОСТИНИЦЫ В седоне</a>
       </section>
 
       <section data-test="subscribe" class="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <h2 class="title subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="description subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
           <label for="subscribe-email"></label>
           <input class="field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
@@ -127,7 +128,7 @@
     <footer data-test="footer" class="page-footer">
         <h2 class="visually-hidden">Контакты</h2>
         <div class="page-footer-social">
-          <ul class="social-list">
+          <ul class="list social-list">
             <li class="social-item">
               <a class="social-link" href="https://vk.com/htmlacademy">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="15" role="img" aria-label="Vkontakte" viewBox="0 0 25 15" fill="none">
