--- a/catalog.html
+++ b/catalog.html
@@ -56,17 +56,16 @@
       <main data-test="main" class="main-container main-inner">
         <section data-test="filter" class="filter">
           <h1 class="filter-title">Гостиницы Седоны</h1>
-
           <div class="filter-breadcrumbs">
-              <a class="breadcrumbs-home" href="index.html">
+              <a class="breadcrumbs-item" href="index.html">
                 <img src="images/home.svg" width="13" height="13" alt="На главную">
               </a>
-              <a class="breadcrumbs-hotel" href="сatalog.html">
+              <a class="breadcrumbs-item" href="сatalog.html">
                 Гостиницы
               </a>
           </div>
 
-          <form class="filter-catalog" action="#" method="get">
+          <form class="filter-catalog" action="https://echo.htmlacademy.ru" method="get">
             <div class="filter-left">
               <fieldset class="filter-item filter-infrastructure">
                 <legend class="filter-heading filter-infrastructure-title">Инфраструктура:</legend>
@@ -118,7 +117,6 @@
                     <input class="cost-text cost-text-before" type="text" value="9000">
                   </label>
                 </div>
-
                 <div class="range-scale">
                   <div class="range-bar">
                     <button class="range-toggle toggle-min">
@@ -130,12 +128,10 @@
                   </div>
                 </div>
               </fieldset>
-
               <div class="filter-button">
                 <button class="button button-submit" type="submit">Применить</button>
                 <button class="button button-reset" type="reset">Сбросить</button>
               </div>
-
             </div>
           </form>
         </section>
@@ -176,7 +172,7 @@
               </a>
               <div class="catalog-card-cost">
                 <p class="catalog-card-room">Гостиница</p>
-                <b class="catalog-card-price">От 4000 ₽</b>
+                <b class="catalog-card-price">От&nbsp;4000&nbsp;₽</b>
               </div>
               <div class="catalog-card-button">
                 <a class="button-card-detail button" href="#">Подробнее</a>
@@ -197,7 +193,7 @@
               </a>
               <div class="catalog-card-cost">
                 <p class="catalog-card-room">Гостиница</p>
-                <b class="catalog-card-price">От 5000 ₽</b>
+                <b class="catalog-card-price">От&nbsp;5000&nbsp;₽</b>
               </div>
               <div class="catalog-card-button">
                 <a class="button-card-detail button" href="#">Подробнее</a>
@@ -218,7 +214,7 @@
               </a>
               <div class="catalog-card-cost">
                 <p class="catalog-card-room">Гостиница</p>
-                <b class="catalog-card-price">От 2500 ₽</b>
+                <b class="catalog-card-price">От&nbsp;2500&nbsp;₽</b>
               </div>
               <div class="catalog-card-button">
                 <a class="button-card-detail button" href="#">Подробнее</a>
@@ -239,7 +235,7 @@
               </a>
               <div class="catalog-card-cost">
                 <p class="catalog-card-room">Гостиница</p>
-                <b class="catalog-card-price">От 1500 ₽</b>
+                <b class="catalog-card-price">От&nbsp;1500&nbsp;₽</b>
               </div>
               <div class="catalog-card-button">
                 <a class="button-card-detail button" href="#">Подробнее</a>
@@ -256,7 +252,7 @@
 
           <ul class="list pagination-list">
             <li class="pagination-item">
-              <a class="pagination-link" href="#">1</a>
+              <a class="pagination-link pagination-link-current" href="#">1</a>
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">2</a>
@@ -268,7 +264,7 @@
               <a class="pagination-link" href="#">4</a>
             </li>
             <li class="pagination-item pagination-item-points">
-              <a class="pagination-link pagination-link-points" href="#">...</a>
+              <button class="button-pagination" type="button">...</button>
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">10</a>
