--- a/index.html
+++ b/index.html
@@ -173,6 +173,66 @@
           </div>
       </footer>
 
+      <div class="modal-container">
+        <div class="modal modal-search">
+          <div class="modal-wrapper">
+            <button class="modal-close-button">
+              <span class="visually-hidden">Закрыть</span>
+            </button>
+              <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+            <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
+              <ul class="list modal-data">
+                <li class="modal-item">
+                  <label class="data-label" for="checkin">Дата Заезда:</label>
+                  <input class="data-input" type="text" id="checkin" name="checkin" value="27 апреля 2020" required>
+                  <span class="modal-error">Мы не можем отправить вас в прошлое.</span>
+                </li>
+                <li class="modal-item">
+                  <label class="data-label" for="exit">Дата выезда:</label>
+                  <input class="data-input" type="text" id="exit" name="exit" value="1 сентября 2023" required>
+                  <span class="modal-notification">На эти даты есть свободные номера. Пока есть.</span>
+                </li>
+              </ul>
+              <ul class="list modal-quantity">
+                <li class="quantity-item">
+                  <label class="quantity-label" for="adults">Взрослые:</label>
+                  <button class="quantity-button quantity-button-minus" type="button">
+                    <span class="visually-hidden">Уменьшить количество взрослых</span>
+                  </button>
+                  <input class="quantity-input" type="number" id="adults" name="adults" value="2" max="2" required>
+                  <button class="quantity-button quantity-button-plus" type="button">
+                    <span class="visually-hidden">Увеличить количество взрослых</span>
+                  </button>
+                </li>
+
+                <li class="quantity-item">
+                  <div class="tooltip-wrapper">
+                    <label class="quantity-label" for="children">Дети:</label>
+                    <span class="tooltip">
+                      <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
+                        <svg class="tooltip-icon" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
+                          <circle cx="13" cy="13" r="13" fill="#83B3D3"/>
+                        </svg>
+                        <span class="tooltip-text" role="tooltip" id="tooltip-label-date">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                      </button>
+                    </span>
+                  </div>
+
+                  <button class="quantity-button quantity-button-minus" type="button">
+                    <span class="visually-hidden">Уменьшить количество детей</span>
+                  </button>
+                  <input class="quantity-input" type="number" id="children" name="children" value="2" max="2">
+                  <button class="quantity-button quantity-button-plus" type="button">
+                    <span class="visually-hidden">Увеличить количество детей</span>
+                  </button>
+                </li>
+              </ul>
+              <button class="button button-modal" type="submit">Найти</button>
+            </form>
+          </div>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
