--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </div>
       </footer>
 
-      <div class="modal-container">
+      <div data-test="modal" class="modal-container">
         <div class="modal">
           <div class="modal-wrapper">
             <button class="modal-close-button">
